# iz2

./: CMakeLists.txt  README.md  main.c
lib/algo/: CMakeLists.txt  algo.c  algo.h
lib/monothread/: sort.c  sort.h
lib/multithread/: CMakeLists.txt  sort.c  sort.h
lib/util/: CMakeLists.txt  util.c  util.h
lib/worker/: CMakeLists.txt  worker.c  worker.h
src/: CMakeLists.txt
src/algo/: CMakeLists.txt  algo.c  algo.h
src/worker/: CMakeLists.txt  worker.c  worker.h
tests/: CMakeLists.txt  tests.cpp
